# Kryckely-s-Improve

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
src/convoi_wizard/: __init__.py  __main__.py  app.py
src/convoi_wizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lesson_scribe/: __init__.py  __main__.py  app.py
src/lesson_scribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
